plugins {
    id "io.spring.dependency-management" version "1.1.4"
}

apply plugin: 'war'
apply plugin: 'pmd'

group = 'org.forketyfork'
version = '0.0.1-SNAPSHOT'
description = "rainyhills"

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

// adding a separate source set for integration tests
// it should have output of the main and test source sets on its classpath
sourceSets {
    integrationTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/integration-test/java')
        }
        resources.srcDir file('src/integration-test/resources')
    }
}

configurations {
    integrationTestImplementation.extendsFrom testImplementation
    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
}

dependencyManagement {
    imports {
        // importing the Arquillian BOM-dependency
        mavenBom 'org.jboss.arquillian:arquillian-bom:1.1.13.Final'
    }
}

dependencies {
    providedCompile 'javax:javaee-api:7.0'

    testImplementation 'junit:junit:4.12'

    integrationTestImplementation 'org.jboss.arquillian.junit:arquillian-junit-container'
    integrationTestImplementation 'org.jboss.arquillian.container:arquillian-weld-ee-embedded-1.1:1.0.0.CR9'
    integrationTestImplementation 'org.jboss.weld:weld-core:2.4.2.SP1'
    integrationTestImplementation 'org.slf4j:slf4j-simple:1.7.25'
}

task integrationTest(type: Test) {
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    jvmArgs = [
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
        '--add-opens=java.base/java.util=ALL-UNNAMED'
    ]
}

// including the integrationTest task between the test and check tasks in the build cycle
check.dependsOn integrationTest
integrationTest.mustRunAfter test

tasks.withType(Test) {
    reports.html.outputLocation = file("${reporting.baseDir}/${name}")
}

// logging the test and integrationTest results during the build
test {
    testLogging {
        events "passed", "skipped", "failed"
    }
}

integrationTest {
    testLogging {
        events "passed", "skipped", "failed"
    }
}

war.archiveFileName = "rainyhills.war"

pmd {
    consoleOutput = true
    toolVersion = '6.55.0'
    ruleSetFiles = files('pmd-ruleset.xml')
}

// heroku deployment
task stage(dependsOn: ['build', 'clean'])
build.mustRunAfter clean

task copyToTarget(type: Copy) {
    into "target"
    from("$buildDir/libs")
}

stage.dependsOn(copyToTarget)